Change minor styling to sidebar* *added more gap between side-nav elements, change sidebar width from fixed value to max-content

--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ html {
 
 .container {
     display: grid;
-    grid-template-columns: 280px 1fr;
+    grid-template-columns: max-content 1fr;
     grid-template-rows: 1fr 4fr;
     height: 100vh;
 }
@@ -30,7 +30,7 @@ html {
     background-color: #ff6565;
     grid-template-columns: max-content 1fr;
     grid-row: span 2;
-    gap: 3rem 1rem;
+    gap: 3.5rem 1rem;
     padding: 1rem;
 }
 
@@ -52,7 +52,7 @@ html {
 .side-help {
     display: grid;
     grid-template-columns: 1fr;
-    gap: 0.5rem;
+    gap: 1.2rem;
     color: white;
 }
 
